# YamDualArmController

./: .gitignore  .gitmodules  PROJECT_WRITEUP.md  README.md  pyproject.toml
.github/workflows/: docs.yml
autonomous/: __main__.py  act_policy.py  control.py  hardware.py  modal_vla.py  policies.py  vla_server.py
curation/: __init__.py  __main__.py  _query.py  manifest.py  pipeline.py
docs/: .gitignore  Gemfile  _config.yml  index.md
docs/_docs/: calibrate.md  convert.md  curate.md  guided-setup.md  hardware.md  install.md  mapping.md  record.md  teleoperate.md  train.md  troubleshoot.md
docs/_layouts/: home.html
docs/assets/css/: style.scss
leader_yam_bridge/: __init__.py  errors.py  leader_yam_bridge.py
leader_yam_bridge/_v1/: calibrate_leaders.py  check_leader.py  convert_to_lerobot.py  push_dataset.py  so101_teleop.py
leader_yam_bridge/tests/: test_bridge.py  test_calibration.py  test_v1_parity.py
outputs/: mission_hacks_calibrations.json
scripts/: calibrate.py  check_cameras.py  initialize_new_project.bash
scripts/calibration/: __init__.py
skills/connect-yam-leader/: SKILL.md
skills/connect-yam-leader/agents/: openai.yaml
skills/connect-yam-leader/references/: configuration.md  troubleshooting.md
teleoperation/: __main__.py
tests/: test_autonomous.py  test_curation.py  test_initialize_new_project.py
